fix: fixed search bar on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -229,6 +229,7 @@ h4 {
 				text-align: left;
 				display: block;
 				margin-left: 10px;
+				max-width: 95%;
 
 				&:focus {
 					outline: none;
